Fix ConsentHandler Tests And Bugs
* Updated tests to handle ConsentViolatedException for invalid batches
* Refactored batch validation logic to throw an exception
when provisions are empty
* Improved test assertions to verify error cases properly
* Fixed updating by Encounter